tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_errors_with_better_message_when_trying_to_invoke_struct_field_that_is_a_function/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Cannot invoke function field 'wrapped' on type 'Foo' as a method
  ┌─ src/main.nr:8:17
  │
8 │                 self.wrapped(1)
  │                 --------------- to call the function stored in 'wrapped', surround the field access with parentheses: '(', ')'
  │

Aborting due to 1 previous error
